--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Muhammed F. Esgin # the website title (if blank, full name will be used instead)
-first_name: Muhammed
-middle_name: F.
-last_name: Esgin
-email: muhammed.esgin@monash.edu
+title: # the website title (if blank, full name will be used instead)
+first_name: Ngoc Khanh
+middle_name: 
+last_name: Nguyen
+email: ngoc_khanh.nguyen@kcl.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  I'm a cryptography researcher, currently working on topics around zero-knowledge proofs, quantum-safe cryptography, and blockchain protocols.
+  
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -17,7 +17,7 @@ keywords: cyber, security, cybersecurity, cryptography, blockchain, academic # a
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://mfesgin.github.io # the base hostname & protocol for your site
+url: https://khanhcrypto.github.com # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
